--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div style="float: left; height: 0px; line-height: 0px; margin-left: 0px; position: relative; width: 800px; z-index: 10; " id="header_layer">
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
         </div>
-        <div style="margin-left: 20px; position: relative; width: 800px; z-index: 5; " id="body_layer">
+        <div style="margin-left: 20px; position: relative; width: 780px; z-index: 5; " id="body_layer">
           <nav class="navbar navbar-expand-lg navbar-light ml-4">
             <a class="navbar-brand" href="index.html">Yash Nandola</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
                 <li class="nav-item"><a class="nav-link" href="Publications.html">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" href="Research.html">Research</a></li>
                 <li class="nav-item"><a class="nav-link" href="CourseProjects.html">Course Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="Coursework.html">Coursewrok</a></li>
+                <li class="nav-item"><a class="nav-link" href="Coursework.html">Coursework</a></li>
                 <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
                 <li class="nav-item"><a class="nav-link" href="Links.html">Links</a></li>
               </ul>
