--- a/CourseProjects.html
+++ b/CourseProjects.html
@@ -4,7 +4,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <title>Coursework</title>
+    <title>Course Projects</title>
     <link rel="stylesheet" type="text/css" media="screen,print" href="Bio_files/Bio.css" />
     <!--[if lt IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='Bio_files/BioIE.css'/><![endif]-->
     <!--[if gte IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='Media/IE8.css'/><![endif]-->
@@ -59,33 +59,15 @@
           <div id="id1" style="height: 657px; left: 85px; position: absolute; top: 36px; width: 630px; z-index: 1; " class="style_SkipStroke shape-with-text mt-4">
             <div class="text-content graphic_textbox_layout_style_default_External_630_657" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style">Indian Institute of Science<br /></p>
-                <p class="paragraph_style_1"><br /></p>
-                <p class="paragraph_style_1"><b>Cumulative GPA:-</b> 9.50 / 10 <br /></p>
-                <p class="paragraph_style_1">Ranked amongst the Top 3 in the batch of 23<br /></p>
-                <p class="paragraph_style_1"><br /></p>
-                <p style="padding-top: 0pt; " class="paragraph_style_1"><b> &emsp; Fluid and Thermal Sciences</b> <b>   &emsp; &emsp; &emsp; Physics of carriers and transport within materials</b><br /></p>
-                <p class="paragraph_style_1">&emsp; Thermodynamics (A+)  &emsp; &emsp; &emsp; &emsp; &emsp; &ensp; Transport Processes (A+)<br /></p>
-                <p class="paragraph_style_1">&emsp; Fluid Mechanics (A) &emsp; &emsp; &emsp; &emsp; &emsp; &ensp; &nbsp; Fundamentals of Nanoscale Heat Conduction (A+)<br /></p>
-                <p class="paragraph_style_1">&emsp; Computational Gas Dynamics (B+) &ensp; &ensp; Materials and Structure Property Correlations (A)<br /></p>
-                <p class="paragraph_style_1">&emsp; Convective Heat Transfer (A+)<br /></p>
-                <p class="paragraph_style_1">&emsp; Applied Combustion (A+) <b>&emsp; &emsp; &emsp; &emsp; &ensp; Mathematics </b><br /></p>
-                <p class="paragraph_style_1">&emsp; Air Conditioning Engineering (A+) &emsp; &ensp; Mathematics (B+)<br /></p>
-                <p class="paragraph_style_1">&emsp; Renewable Energy Technologies (A)<br /></p>
-                <p class="paragraph_style_1"><br /></p>
-                <p style="padding-top: 0pt; " class="paragraph_style">Motilal Nehru National Institute of Technology Allahabad<br /></p>
-                <p class="paragraph_style_1"><br /></p>
-                <p class="paragraph_style_1"><b>Cumulative GPA:-</b> 8.90 / 10 <br /></p>
-                <!-- <p class="paragraph_style_1">Ranked amongst the Top 3 in the batch of 23<br /></p> -->
-                <p class="paragraph_style_1"><br /></p>
-                <p style="padding-top: 0pt; " class="paragraph_style_1"><b> &emsp; Fluid and Thermal Sciences</b> <b>   &emsp; &emsp; &emsp; Physics of carriers and transport within materials</b><br /></p>
-                <p class="paragraph_style_1">&emsp; Heat and Mass Transfer (A+)  &emsp; &emsp; &emsp; &emsp; &emsp; &ensp; Transport Processes (A+)<br /></p>
-                <p class="paragraph_style_1">&emsp; Fluid Mechanics (B+) &emsp; &emsp; &emsp; &emsp; &emsp; &ensp; &nbsp; Fundamentals of Nanoscale Heat Conduction (A+)<br /></p>
-                <p class="paragraph_style_1">&emsp; Engineering Thermodynamics (B+) &ensp; &ensp; Materials and Structure Property Correlations (A)<br /></p>
-                <p class="paragraph_style_1">&emsp; Steam Power Engineering (A+)<br /></p>
-                <p class="paragraph_style_1">&emsp; Internal Combustion Engine (A) <b>&emsp; &emsp; &emsp; &emsp; &ensp; Mathematics </b><br /></p>
-                <p class="paragraph_style_1">&emsp; Refrigeration and Air Conditioning (A) &emsp; &ensp; Mathematics (A)<br /></p>
-                <p class="paragraph_style_1">&emsp; Energy Mnagement (A) &emsp; &ensp; Mathematics II (A)<br /></p>
+                <p style="padding-top: 0pt; " class="paragraph_style">Flamelet Generated Manifold - Literature Survey<br /></p>
+                <p class="paragraph_style_1">Course: Applied Combustion, Course Instructor: Prof. R. V. Ravikrishna<br /></p>
+                <p class="paragraph_style_1"><b>Spring 2020<br /></p>
+                <p class="paragraph_style_1"><a href="https://docs.google.com/presentation/d/14XDLhKOeWeHiLDnk--PKnNIDfS15sLb2/edit?usp=sharing&ouid=101783552636217335596&rtpof=true&sd=true">(Slides)</a> <a href="Bio_files/FGM_Report.pdf">(Report)</a><br /></p>
+                <ul class="paragraph_style_1" style="list-style-type:disc;">
+                  <li>Coffee</li>
+                  <li>Tea</li>
+                  <li>Milk</li>
+                </ul>
                 <p class="paragraph_style_1"><br /></p>
                 <p class="paragraph_style_1"><br /></p>
                 <p class="paragraph_style_1"><br /></p>
