--- a/index.html
+++ b/index.html
@@ -34,11 +34,14 @@
         <div style="margin-left: 20px; position: relative; width: 780px; z-index: 5; " id="body_layer">
           <nav class="navbar navbar-expand-lg navbar-light ml-4">
             <a class="navbar-brand" href="index.html">Yash Nandola</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
+              <ul class="nav navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="Bio.html">Bio</a></li>
                 <li class="nav-item"><a class="nav-link" href="Publications.html">Publications</a></li>
