--- a/index.html
+++ b/index.html
@@ -32,17 +32,16 @@
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
         </div>
         <div style="margin-left: 20px; position: relative; width: 780px; z-index: 5; " id="body_layer">
-          <nav class="navbar navbar-expand-lg navbar-light ml-4">
+          <!-- THE NAVBAR -->
+          <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="index.html">Yash Nandola</a>
-            <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
             </button>
+          
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="nav navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active"><a class="nav-link" href="index.html">Home <span class="sr-only"></span></a></li>
                 <li class="nav-item"><a class="nav-link" href="Bio.html">Bio</a></li>
                 <li class="nav-item"><a class="nav-link" href="Publications.html">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" href="Research.html">Research</a></li>
@@ -53,7 +52,7 @@
               </ul>
             </div>
           </nav>
-          </div>
+        </div>
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
           <div style="height: 189px; width: 252px;  height: 189px; left: 85px; position: absolute; top: 131px; width: 252px; z-index: 1; " class="tinyText style_SkipStroke">
             <img src="Home_files/Yash_Nandola_Profile.jpg" alt="" style="border: none; height: 189px; width: 252px; " />
