Navbar expand small screen

--- a/CourseProjects.html
+++ b/CourseProjects.html
@@ -33,7 +33,7 @@
         </div>
         <div style="margin-left: 20px; position: relative; width: 780px; z-index: 5; " id="body_layer">
           <!-- THE NAVBAR -->
-          <nav class="navbar navbar-expand-lg navbar-light">
+          <nav class="navbar navbar-expand-sm navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -41,11 +41,11 @@
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="index.html">Home <span class="sr-only"></span></a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home <span class="sr-only"></span></a></li>
                 <li class="nav-item"><a class="nav-link" href="Bio.html">Bio</a></li>
                 <li class="nav-item"><a class="nav-link" href="Publications.html">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" href="Research.html">Research</a></li>
-                <li class="nav-item"><a class="nav-link" href="CourseProjects.html">Course Projects</a></li>
+                <li class="nav-item active"><a class="nav-link" href="CourseProjects.html">Course Projects</a></li>
                 <li class="nav-item"><a class="nav-link" href="Coursework.html">Coursework</a></li>
                 <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
                 <li class="nav-item"><a class="nav-link" href="Links.html">Links</a></li>
