--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div style="margin-left: 20px; position: relative; width: 780px; z-index: 5; " id="body_layer">
           <!-- THE NAVBAR -->
-          <nav class="navbar navbar-expand-lg navbar-light">
+          <nav class="navbar navbar-expand-sm navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
