Updated course projects, distance from top

--- a/CourseProjects.html
+++ b/CourseProjects.html
@@ -58,19 +58,99 @@
           
 
 
-          <div id="id1" style="height: 657px; left: 85px; position: absolute; top: 36px; width: 630px; z-index: 1; " class="style_SkipStroke shape-with-text mt-4">
+          <div id="id1" style="height: 657px; left: 35px; position: absolute; top: 70px; width: 700px; z-index: 1; " class="style_SkipStroke shape-with-text mt-4">
             <div class="text-content graphic_textbox_layout_style_default_External_630_657" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style">Flamelet Generated Manifold - Literature Survey<br /></p>
                 <p class="paragraph_style_1">Course: Applied Combustion, Course Instructor: Prof. R. V. Ravikrishna<br /></p>
                 <p class="paragraph_style_1"><b>Spring 2020<br /></p>
-                <p class="paragraph_style_1"><a href="https://docs.google.com/presentation/d/14XDLhKOeWeHiLDnk--PKnNIDfS15sLb2/edit?usp=sharing&ouid=101783552636217335596&rtpof=true&sd=true">(Slides)</a> <a href="Bio_files/FGM_Report.pdf">(Report)</a><br /></p>
-                <ul class="paragraph_style_1" style="list-style-type:disc;">
-                  <li>Coffee</li>
-                  <li>Tea</li>
-                  <li>Milk</li>
+                <p class="paragraph_style_1"><a href="https://docs.google.com/presentation/d/14XDLhKOeWeHiLDnk--PKnNIDfS15sLb2/edit?usp=sharing&ouid=101783552636217335596&rtpof=true&sd=true">(Slides)</a> <a href="https://drive.google.com/file/d/1EO8P6ikQ9YCqqjTF_syO_siaeXZ5x7ju/view?usp=sharing">(Report)</a><br /></p>
+                <ul class="paragraph_style_1 text-justify" style="list-style-type:disc;">
+                  <li>Developed understanding of flamelet class and manifold class of techniques used to model combustion within systems involving complex flow fields.</li>
+                  <li>Understood theoretical concepts and implementation of Flamelet Generated Manifold (FGM) model, that combines strengths of flamelet based and manifold based model.</li>
+                  <li>Performed literature survey to undestand success and constraints of FGM technique to model premixed flames, laminar flames and combustion within gas turbines and internal combustion engines.</li>
+                  <li>FGM model is reported to bring down the simulation time from a week to around 8-10 hours, while providing results comparable to the ones generated using detailed chemistry and modeling complex flow field.</li>
                 </ul>
-                <p class="paragraph_style_1"><br /></p>
+                <!-- THE CAROUSEL -->
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <!-- Indicators -->
+                  <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#myCarousel" data-slide-to="1"></li>
+                  <li data-target="#myCarousel" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                    <img class="first-slide" src="Bio_files/FGM_concept.png" alt="Explaining FGM Concept" />
+                  </div>
+                  <div class="container-fluid"></div>
+                  <div class="item">
+                    <img class="second-slide" src="Bio_files/FGM_equations_1.png" alt="Equations Conservation to Simplified Conservation" />
+                  </div>
+                  <div class="container-fluid"></div>
+                  <div class="item">
+                    <img class="third-slide" src="Bio_files/FGM_equations_2.png" alt="Equations Simplified Conservation to Quasi 1-D" />
+                  </div>
+                  <div class="container-fluid"></div>
+                  </div>
+                  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                  </a>
+                </div>
+                <p style="padding-top: 30pt; " class="paragraph_style">Comparing Numerical Schemes to model flow discontinuities using Euler Equations<br /></p>
+                <p class="paragraph_style_1">Course: Computational Gas Dynamics, Course Instructor: Prof. S. V. Raghurama Rao<br /></p>
+                <p class="paragraph_style_1"><b>Spring 2020<br /></p>
+                <p class="paragraph_style_1"><a href="https://drive.google.com/file/d/1GK-hamsOMWPeDyssfr6cLfu2fMdxpR-3/view?usp=sharing">(Report)</a><br /></p>
+                <ul class="paragraph_style_1 text-justify" style="list-style-type:disc;">
+                  <li>Implemented numerical schemes to capture discontinuities in the flow field using Euler equations for different test cases leading to shock creation because of different initial conditions.</li>
+                  <li>Understood theoretical concepts and implementation of Flamelet Generated Manifold (FGM) model, that combines strengths of flamelet based and manifold based model.</li>
+                </ul>
+                <!-- THE CAROUSEL -->
+                <!-- THE CAROUSEL -->
+                <div id="myCarousel-1" class="carousel slide" data-ride="carousel">
+                  <!-- Indicators -->
+                  <ol class="carousel-indicators">
+                    <li data-target="#myCarousel-1" data-slide-to="0" class="active"></li>
+                  <li data-target="#myCarousel-1" data-slide-to="1"></li>
+                  <li data-target="#myCarousel-1" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                    <img class="first-slide" src="Bio_files/Steady_contact_discontinuity.png" alt="Steady_contact_discontinuity" />
+                  </div>
+                  <div class="container-fluid"></div>
+                  <div class="item">
+                    <img class="second-slide" src="Bio_files/Steady_shock.png" alt="Steady_shock" />
+                  </div>
+                  <div class="container-fluid"></div>
+                  <div class="item">
+                    <img class="third-slide" src="Bio_files/Unsteady_shock.png" alt="Unsteady_shock" />
+                  </div>
+                  <div class="container-fluid"></div>
+                  </div>
+                  <a class="left carousel-control" href="#myCarousel-1" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#myCarousel-1" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                  </a>
+                </div>
+                <p style="padding-top: 30pt; " class="paragraph_style">Granular Flows - Literature Survey<br /></p>
+                <p class="paragraph_style_1 text-justify" >Because of my growing interest in complex fluids and soft matter, I accepted the challenge of learning fundamentals independently. Amongst the papers on granular materials, I was amazed after reading about the secondary vortex formation observed in the discrete element method (DEM) simulations [1]. With the phenomenon captured only at the free surface of the Couette cell by the authors, the next step I see is capturing vortex formation experimentally and validating the results obtained from the simulations. Of the several challenges associated with the experiments, the significant one is the material selection to image the phenomena because of the difference in the refractive index of glass beads and air and the opaqueness of sand. A similar formation of the secondary vortex was noted for Newtonian and viscoelastic fluids contained in a cylinder with a rotating lid at the top, where velocity gradient and gravity were collinear [2]. This is different from the secondary flow observed for granular materials, where the condition for vortex formation is that the direction of gravity should be normal to the velocity gradient. I find it interesting to explore different microstructures that can meet specific flow objectives, possibly under different flow conditions. Also, constitutive equations can be developed to explain the phenomenon whose results can be compared with the results of DEM simulations performed by the authors. <a href="https://docs.google.com/document/d/1yriaChOTsrQpTWIKRBFFoYlf-Lw2b0sS/edit?usp=sharing&ouid=101783552636217335596&rtpof=true&sd=true">(Document)</a><br /></p>
+                <p class="paragraph_style_1"><b>References:</b><br /></p>
+                <ol class="paragraph_style_1 text-justify">
+                  <li>Dsouza PV, Nott PR. Dilatancy-driven secondary flows in dense granular materials. J Fluid Mech 2021;914:A36. https://doi.org/10.1017/jfm.2020.1029.</li>
+                  <li>Hill CT. Nearly Viscometric Flow of Viscoelastic Fluids in the Disk and Cylinder System. II: Experimental. Transactions of the Society of Rheology 1972;16:213–45. https://doi.org/10.1122/1.549241.</li>
+                </ol>
+                
+                <p class="paragraph_style_1"><b>Note:</b> I am still performing literature review and updating the document periodically.<br /></p>
                 <p class="paragraph_style_1"><br /></p>
                 <p class="paragraph_style_1"><br /></p>
                 <p class="paragraph_style_1"><br /></p>
@@ -79,7 +159,7 @@
               </div>
             </div>
           </div>
-          <div style="height: 645px; line-height: 645px; " class="spacer"> </div>
+          <div style="height: 1800px; line-height: 1800px; " class="spacer"> </div>
         </div>
       </div>
     </div>
